app/src/test/resources/programs/valid/various/Nested.extension
foo func(x : Int) -> Int = 0;

foo main() -> Int = if { if { loop { break false; } } then { func(loop { break 1; }) } else { true } } then { if { false } then { 2 + if {1 >= 0} then 100 else {3} } else { func(if true then loop { true; 3141592 } else 0); } } else { if {} then {} }
