app/src/test/resources/programs/invalid/conditionals/thenAndElseEvaluateToDifferentTypes.extension
// 'then' and 'else' blocks evaluate to different types
foo main() -> Int = {
    if true then 1 else ()
}
